--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,11 @@ body{
   position: relative;
 }
 .overlay{
-  position:absolute;
+
   background-color: rgb(236, 238, 238);
-  height: 100;
-  width: 100;
-  mix-blend-mode: normal;
+  border: 2px;
+  border-color: aqua;
+  background-color: azure;
+  border-radius: 5px;
 
 }
